After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756770 - GTK+ 3.18.2 doesn't compile on OS X 10.6 (but so close!)
GTK+ 3.18.2 doesn't compile on OS X 10.6 (but so close!)
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: Quartz
3.18.x
Other Mac OS
: Normal major
: ---
Assigned To: gtk-quartz maintainers
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-10-18 05:36 UTC by Ryan Hendrickson
Modified: 2015-10-25 17:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Remove usage of instancetype keyword (430 bytes, patch)
2015-10-18 05:36 UTC, Ryan Hendrickson
committed Details | Review

Description Ryan Hendrickson 2015-10-18 05:36:33 UTC
Created attachment 313599 [details] [review]
Remove usage of instancetype keyword

gdk/quartz/gdkcursor-quartz.c uses the instancetype keyword, which doesn't seem to be supported in the version of Objective C that Snow Leopard uses. Replacing that keyword with the thing it represents restores order to the galaxy.
Comment 1 Matthias Clasen 2015-10-18 13:43:25 UTC
Review of attachment 313599 [details] [review]:

Looks harmless enough to me.
Comment 2 Ryan Hendrickson 2015-10-25 16:03:15 UTC
Commit?